// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> On rendering When header is collapsed should render toggle button on header 1`] = `
<Adapter
  className="templateHeader"
>
  <Row
    align="center"
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <div
      className="headerInfo"
    >
      <Icon
        className="triggerUnfold"
        onClick={[Function]}
        type="menu-unfold"
      />
      <withRouter(Breadcrumb)
        className="templateBreadcrumb"
        style={
          Object {
            "color": "var(--white, #FFFFFF)",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "color": "var(--white)",
          "fontSize": "20px",
        }
      }
    >
      VistaJet Microservice
      <Tag />
    </div>
    <div
      className="userInfo"
    >
      <Clock
        style={
          Object {
            "lineHeight": "1px",
          }
        }
      />
      <Dropdown
        mouseEnterDelay={0.15}
        mouseLeaveDelay={0.1}
        overlay={
          <Menu
            className=""
            focusable={false}
            prefixCls="ant-menu"
            theme="light"
          >
            <MenuItem>
              About
            </MenuItem>
          </Menu>
        }
        placement="bottomLeft"
        prefixCls="ant-dropdown"
        style={
          Object {
            "lineHeight": "1px",
          }
        }
        trigger={
          Array [
            "click",
          ]
        }
      >
        <span>
          <Icon
            type="down"
          />
        </span>
      </Dropdown>
    </div>
  </Row>
</Adapter>
`;

exports[`<Header /> On rendering When header is not collapsed should not render toggle button on header 1`] = `
<Adapter
  className="templateHeader"
>
  <Row
    align="center"
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <div
      className="headerInfo"
    >
      <withRouter(Breadcrumb)
        className="templateBreadcrumb"
        style={
          Object {
            "color": "var(--white, #FFFFFF)",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "color": "var(--white)",
          "fontSize": "20px",
        }
      }
    >
      VistaJet Microservice
      <Tag />
    </div>
    <div
      className="userInfo"
    >
      <Clock
        style={
          Object {
            "lineHeight": "1px",
          }
        }
      />
      <Dropdown
        mouseEnterDelay={0.15}
        mouseLeaveDelay={0.1}
        overlay={
          <Menu
            className=""
            focusable={false}
            prefixCls="ant-menu"
            theme="light"
          >
            <MenuItem>
              About
            </MenuItem>
          </Menu>
        }
        placement="bottomLeft"
        prefixCls="ant-dropdown"
        style={
          Object {
            "lineHeight": "1px",
          }
        }
        trigger={
          Array [
            "click",
          ]
        }
      >
        <span>
          <Icon
            type="down"
          />
        </span>
      </Dropdown>
    </div>
  </Row>
</Adapter>
`;
